assign3/shuflink
Q1:
The patch made the performance of ls worse by adding another check in the code
for the ls command. This is confirmed by the time command, which almost always
reports that the unmodified ls command is performed in less time.

Q2:
I would imagine that we would have to watch out for any cases where we used ls
with the -a and -A options without regards to the order they appeared in due to
the fact that -a would always override -A. Now that -A will override -a if it
appears after -a, we would have to make sure none of our applications which
utilized the override of -a from -A (intentionally or not) stopped functioning
as desired. If they did stop producing desired behavior, we would have to fix
these errors. If we did not have any of these instances of using ls with -a and
-A, the our applications would not be affected by using this version of
coreutils.

Q3:
There will be an index out of range error thrown in the chooseline()
function. This is because randline.py will attempt to print a number of random
lines from a file that has no contents. Thus, the choice function, which
attmepts to access the length of a sequence that does not exist, throwing an
IndexEror. 

Output:
Traceback (most recent call last):
  File "randline.py", line 70, in <module>
    main()
  File "randline.py", line 64, in main
    sys.stdout.write(generator.chooseline())
  File "randline.py", line 34, in chooseline
    return random.choice(self.lines)
  File "/usr/local/cs/Python-2.7.15/lib/python2.7/random.py", line 277, in
  choice return seq[int(self.random() * len(seq))]  # raises IndexError if seq
  is empty 
IndexError: list index out of range

Q4:
When running randline.py with python3, I recieve a SyntaxError referring to line
65 of the script in all input cases. This error is due to the fact that Python 3
does not support automatic tuple unpacking, therefore the line (errno, strerror)
is invalid.  

Output:
File "randline.py", line 65
    except IOError as (errno, strerror):
                      ^
SyntaxError: invalid syntax
